Compiles as Java 11 using modules